<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp">

    <ListView
        android:id="@+id/tag_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:choiceMode="multipleChoice" />

    <Button
        android:id="@+id/apply_tags_button"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/button_dark"
        android:text="Apply Tags" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:backgroundTint="@color/button_light"
        android:text="Cancel" />
</LinearLayout>

