...
        android:layout_marginTop="16dp"
        android:text="User Login"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="Enter Username" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/white"
...
