<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"

    tools:context=".MainActivity">

    <ListView
        android:id="@+id/item_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topButtonLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/selectButton"
            android:layout_width="93dp"
            android:layout_height="67dp"
            android:layout_margin="3dp"
            android:text="Select Items"
            android:backgroundTint="@color/button_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/tagButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/tagButton"
            android:layout_width="93dp"
            android:layout_height="67dp"
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="View Tags"
            android:backgroundTint="@color/button_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/sortButton"
            app:layout_constraintStart_toEndOf="@id/selectButton"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/sortButton"
            android:layout_width="93dp"
            android:layout_height="67dp"
            android:layout_margin="3dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Sort"
            android:backgroundTint="@color/button_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/filterButton"
            app:layout_constraintStart_toEndOf="@id/tagButton"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/filterButton"
            android:layout_width="93dp"
            android:layout_height="67dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_margin="3dp"
            android:text="Filter"
            android:backgroundTint="@color/button_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/sortButton"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_item_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_light"
            android:layout_margin="16dp"
            android:layout_gravity="end|bottom"
            android:clickable="true"
            android:focusable="true"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:srcCompat="@android:drawable/ic_input_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/total_item_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Total Estimated Value: $0"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/filter_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
    </androidx.fragment.app.FragmentContainerView>

</androidx.constraintlayout.widget.ConstraintLayout>

